; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_get_all_datasets.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_get_all_datasets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i64 }

@.str = private unnamed_addr constant [19 x i8] c"Reading ZFS config\00", align 1
@g_zfs = common dso_local global i32 0, align 4
@get_one_dataset = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"done.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @get_all_datasets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_all_datasets(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32*, i32** %3, align 8
  store i32* %7, i32** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %9 = load i64, i64* %4, align 8
  store i64 %9, i64* %8, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = call i32 @gettext(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @set_progress_header(i32 %13)
  br label %15

15:                                               ; preds = %12, %2
  %16 = load i32, i32* @g_zfs, align 4
  %17 = load i32, i32* @get_one_dataset, align 4
  %18 = call i32 @zfs_iter_root(i32 %16, i32 %17, %struct.TYPE_3__* %5)
  %19 = load i64, i64* %4, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = call i32 @gettext(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32 @finish_progress(i32 %22)
  br label %24

24:                                               ; preds = %21, %15
  ret void
}

declare dso_local i32 @set_progress_header(i32) #1

declare dso_local i32 @gettext(i8*) #1

declare dso_local i32 @zfs_iter_root(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @finish_progress(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
